--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vitejs/plugin-vue": "^5.0.5",
     "axios": "^1.7.2",
     "flatpickr": "^4.6.13",
